# Stm32Template

./: .config  .gitignore  CMakeLists.txt  SConstruct  rtconfig.h  rtconfig.py  stm32f103.cfg
applications/: main.c
applications/core/: shelves.c  shelves.h
applications/infrastructure/: buzzer.c  buzzer.h  dial_switch.c  dial_switch.h  uart.c  uart.h
board/: Kconfig  board.c
